--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="google-site-verification" content="fApbudA2JsVg5ehXg3r56XMR8P_E5k4myDsdCkCbdOk" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="devSquare.club"
