web mainfest updated

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="google-site-verification" content="fApbudA2JsVg5ehXg3r56XMR8P_E5k4myDsdCkCbdOk" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="devSquare.club"
-      content="devSquare.club is a open platform for independent developers to share their expertise and experiences with other cool developers around the globe."
+      content="devSquare.club is a open platform for independent developers to share their expertise and experiences with peer developers around the globe."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
